--- a/views/layout.pug
+++ b/views/layout.pug
@@ -66,6 +66,9 @@ head
           if(capabilities.indexOf('QLTKNQ-QLTK') !== -1)
             li
               a(href='quan-ly-tai-khoan-nhom-quyen?m=tai-khoan') Quản lý tài khoản
+          if(capabilities.indexOf('QLTKNQ-LDL') !== -1)
+            li
+              a(href='quan-ly-tai-khoan-nhom-quyen?m=lop-du-lieu') Quản lý lớp dữ liệu
           if(capabilities.indexOf('QLTKNQ-QLNQ') !== -1)
             li
               a(href='quan-ly-tai-khoan-nhom-quyen?m=nhom-quyen') Quản lý nhóm quyền
